--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,31 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@font-face {
+  font-family: 'GonB';
+  src: url('../public/fonts/Gontserrat-Bold.ttf')
+}
+@font-face {
+  font-family: 'GonM';
+  src: url('../public/fonts/Gontserrat-Medium.ttf')
+}
+@font-face {
+  font-family: 'GonR';
+  src: url('../public/fonts/Gontserrat-Regular.ttf')
+}
+@font-face {
+  font-family: 'MonM';
+  src: url('../public/fonts/Montserrat-Medium.ttf')
+}
+@font-face {
+  font-family: 'MonR';
+  src: url('../public/fonts/Montserrat-Regular.ttf')
+}
+@font-face {
+  font-family: 'pala';
+  src: url('../public/fonts/palatinolinotype_roman.ttf')
+}
+
 body{
   margin: 0;
   width: 100vw;
