--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,12 @@ body {
   height: 100vh;
 }
 
+.loading-page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
